--- a/2evaluacion/nuevos selectores/nuevosselectores1.css
+++ b/2evaluacion/nuevos selectores/nuevosselectores1.css
@@ -6,7 +6,7 @@ ul .alerta{color: green;}
 /*(0,0,0,0)
 1º STYLE=1 NOSTYLE=0
 2º por cada ID
-3º por cada clasa
+3º por cada clase
 4º por cada elemento o pseudoelemento
 !important; PREEVALECE POR TODO. 
 */
